---
config:
  layout: elk
---
classDiagram
    direction TB
    class GameObject {
        <<Abstract>>
        # float x, y
        # float width, height
        # float velX, velY
        # Rectangle area
        # Texture texture
        + GameObject(x, y, width, height, velX, velY, tex)
        + getArea() Rectangle
        + setPos(x, y)
        + colisionaCon(otro: GameObject) boolean
        + destruir()
    }
    class Entity {
        <<Interface>>
        + draw(batch: SpriteBatch)
        + update(delta: float)
        + isOutOfScreen() boolean
        + interactWith(entity: Playable)
        + colisionaCon(entity: GameObject) boolean
    }
    class Playable {
        <<Interface>>
        + getVidas() int
        + getPuntos() int
        + getHerido() boolean
        + animacionHerido(delta: float)
        + herir()
        + sumarPuntos(pp: int)
    }
    class Interaction {
        <<Interface>>
        + interact(entity: Playable)
    }
    class Car {
        - Sound sonidoHerido
        - int vidas
        - int puntos
        - boolean herido
        - float tiempoHeridoActual
        + crear()
        + update(delta)
        + draw(batch)
        + herir()
        + sumarPuntos(int)
    }
    class Npc {
        <<Abstract>>
        # Interaction interactionStrategy
        + Npc(texture, strategy)
        + update(delta)
        + draw(batch)
        + interactWith(entity: Playable)
    }
    class Police {
        + Police()
        + interactWith(entity: Playable)
    }
    class Cash {
        - Sound cashSound
        + Cash()
        + interactWith(entity: Playable)
    }
    class Damage {
        + interact(entity: Playable)
    }
    class Reward {
        + interact(entity: Playable)
    }
    class TrafficManager {
        - Array~Npc~ npcs
        - Music trafficMusic
        - long lastDropTime
        + crear()
        + actualizarMovimiento(car: GameObject) boolean
        + actualizarDibujoNpcs(batch)
        + pausar()
        + continuar()
    }
    class NPCSupplier {
        - static List registered
        + register(npcClass)
        + createRandom() Npc
    }
    class NPCRegister {
        + static registerAll()
    }
    class NPCType {
        <<Annotation>>
    }
    class AssetManager {
        <<Singleton>>
        - static AssetManager instance
        - Map textures
        - Map sounds
        - Map musics
        + getInstance()
        + load()
        + getTexture(key)
        + getSound(key)
    }
    class GameLluviaMenu {
        - SpriteBatch batch
        - BitmapFont font
        - int higherScore
        - Preferences prefs
        + create()
        + render()
    }
    class GameScreen {
        - Car car
        - TrafficManager trafficManager
        + render(delta)
    }
    Car --|> GameObject
    Car ..|> Entity
    Car ..|> Playable
    Npc --|> GameObject
    Npc ..|> Entity
    Police --|> Npc
    Cash --|> Npc
    Damage ..|> Interaction
    Reward ..|> Interaction
    GameScreen *-- Car
    GameScreen *-- TrafficManager
    TrafficManager o-- Npc : gestiona lista
    Npc o-- Interaction : usa
    Police ..> Damage : inyecta en constructor
    Cash ..> Reward : inyecta en constructor
    TrafficManager ..> NPCSupplier : pide NPCs
    NPCRegister ..> NPCSupplier : registra clases
    NPCRegister ..> NPCType : busca anotación
    Police ..> NPCType : anotada
    Cash ..> NPCType : anotada
    GameScreen ..> AssetManager : usa recursos
    Police ..> AssetManager
    Cash ..> AssetManager
    GameLluviaMenu --> GameScreen : cambia pantalla